--- a/Repository.Dapper.Test/Repository.Dapper.Test.csproj
+++ b/Repository.Dapper.Test/Repository.Dapper.Test.csproj
@@ -7,11 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DapperExtensionsAspNetCore" Version="1.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.2.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.2.0" />
     <PackageReference Include="MySql.Data" Version="6.10.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Repository.Dapper\Repository.Dapper.csproj" />
   </ItemGroup>
 
 </Project>
