--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -5,11 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <Compile Remove="Serialize\**" />
+    <EmbeddedResource Remove="Serialize\**" />
+    <None Remove="Serialize\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Serialize\" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.1" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Runtime\Serialization\" />
   </ItemGroup>
 
 </Project>
