--- a/Infrastructure.Test/Infrastructure.Test.csproj
+++ b/Infrastructure.Test/Infrastructure.Test.csproj
@@ -71,6 +71,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="C:\Users\wenghuacheng\.nuget\packages\nlog.config\4.5.0\contentFiles\any\any\NLog.config">
+      <Link>NLog.config</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
