--- a/Platform.Domain/Platform.Domain.csproj
+++ b/Platform.Domain/Platform.Domain.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Domain.Core\Domain.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
 </Project>
