--- a/WordRecoder.Infrastructure/WordRecoder.Infrastructure.csproj
+++ b/WordRecoder.Infrastructure/WordRecoder.Infrastructure.csproj
@@ -6,11 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.2" />
-    <PackageReference Include="Dapper" Version="1.50.2" />
-    <PackageReference Include="MySql.Data" Version="6.10.4" />
+    <PackageReference Include="Dapper" Version="1.50.4" />
+    <PackageReference Include="MySql.Data" Version="6.10.6" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Repository.Dapper\Repository.Dapper.csproj" />
     <ProjectReference Include="..\WordRecoder.Domain\WordRecoder.Domain.csproj" />
   </ItemGroup>
 
