简化设计。修改wpf项目为autofac。之后需要修改服务和仓储接口

--- a/WordRecoder.Application/WordRecoder.Application.csproj
+++ b/WordRecoder.Application/WordRecoder.Application.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Application.Core\Application.Core.csproj" />
     <ProjectReference Include="..\WordRecoder.Domain\WordRecoder.Domain.csproj" />
     <ProjectReference Include="..\WordRecoder.Infrastructure\WordRecoder.Infrastructure.csproj" />
   </ItemGroup>
