--- a/Repository.Test/packages.config
+++ b/Repository.Test/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper" version="1.50.4" targetFramework="net461" />
+  <package id="Dapper" version="1.50.5" targetFramework="net461" />
+  <package id="DapperExtensions.DotnetCore" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Design" version="2.0.1" targetFramework="net461" />
