--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>../DLL</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Serialize\**" />
     <EmbeddedResource Remove="Serialize\**" />
