--- a/WordRecoder.Presentation.WPF/packages.config
+++ b/WordRecoder.Presentation.WPF/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="2.6.3.862" targetFramework="net461" />
-  <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
+  <package id="Autofac" version="4.8.1" targetFramework="net461" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="net461" />
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net461" />
-  <package id="Dapper" version="1.50.4" targetFramework="net461" />
+  <package id="Dapper" version="1.50.5" targetFramework="net461" />
   <package id="DapperExtensions.DotnetCore" version="1.0.1" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.4.0.1044" targetFramework="net461" />
@@ -54,6 +54,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
 </packages>
